--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-modalize": "^2.1.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.3",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
