--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
-    "expo-image": "^1.2.3",
+    "expo-image": "~1.0.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
     "globalstyles": "^2.0.0",
     "react": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-native": "0.71.8",
-    "react-native-gesture-handler": "^2.10.1",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.3",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-swiper": "^1.6.0"
   },
