--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "^1.18.1",
-    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
@@ -22,12 +20,14 @@
     "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-image": "~1.0.1",
+    "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
     "globalstyles": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-google-button": "^0.7.2",
+    "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.9.0",
@@ -35,7 +35,10 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^8.0.4",
+    "react-native-radio-buttons-group": "^3.0.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
