--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-picker-select": "^8.0.4",
     "react-native-radio-buttons-group": "^3.0.2",
     "react-native-reanimated": "~2.14.4",
+    "react-native-refresh-control": "^2.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-swiper": "^1.6.0",
