--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-blur": "^12.3.0",
     "expo-image": "~1.0.1",
     "expo-image-picker": "^14.1.1",
+    "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
     "globalstyles": "^2.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-google-button": "^0.7.2",
