--- a/app.json
+++ b/app.json
@@ -2,9 +2,10 @@
   "expo": {
     "name": "PoBo",
     "slug": "PoBo",
+    "description": "My team is H20, this is the best App",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/favicon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
