--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
-    "expo-blur": "^12.3.0",
+    "expo-blur": "~12.2.2",
     "expo-image": "~1.0.1",
     "expo-image-picker": "^14.1.1",
     "expo-linear-gradient": "^12.1.2",
+    "expo-location": "^15.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
     "globalstyles": "^2.0.0",
@@ -38,6 +39,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-maps": "1.3.2",
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
@@ -50,7 +52,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.1",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
