--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-radio-buttons-group": "^3.0.2",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-refresh-control": "^2.1.0",
     "react-native-safe-area-context": "4.5.0",
