--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-linear-gradient": "^12.1.2",
     "expo-location": "^15.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "firebase": "^9.22.1",
     "globalstyles": "^2.0.0",
     "moment": "^2.29.4",
@@ -45,6 +46,7 @@
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^8.0.4",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-radio-buttons-group": "^3.0.2",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.14.4",
@@ -53,8 +55,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.1",
-    "react-native-web": "~0.18.10",
-    "expo-updates": "~0.16.4"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
