--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
