--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
@@ -22,6 +23,7 @@
     "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-blur": "~12.2.2",
+    "expo-font": "^11.1.1",
     "expo-image": "~1.0.1",
     "expo-image-picker": "^14.1.1",
     "expo-linear-gradient": "^12.1.2",
@@ -30,7 +32,10 @@
     "expo-updates": "~0.16.4",
     "firebase": "^9.22.1",
     "globalstyles": "^2.0.0",
+    "i": "^0.3.7",
+    "ionicons": "^7.1.2",
     "moment": "^2.29.4",
+    "npm": "^9.8.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-google-button": "^0.7.2",
@@ -56,6 +61,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
