--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "axios": "^1.4.0",
     "expo": "^48.0.18",
     "expo-blur": "~12.2.2",
-    "expo-font": "^11.1.1",
+    "expo-font": "~11.1.1",
     "expo-image": "~1.0.1",
     "expo-image-picker": "^14.1.1",
     "expo-linear-gradient": "^12.1.2",
@@ -50,6 +50,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-qrcode-svg": "^6.2.0",
@@ -59,6 +60,7 @@
     "react-native-refresh-control": "^2.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
